gitops/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: dotnet-app
  labels:
    app: dotnet-app
    app.kubernetes.io/component: dotnet-app
    app.kubernetes.io/instance: dotnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: dotnet-app
  template:
    metadata:
      labels:
        deployment: dotnet-app
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: dotnet-app
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/dev/dotnet-app:1.1
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
